--- a/demo-web/src/main/resources/log4j.properties
+++ b/demo-web/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=off,my
+log4j.rootLogger=DEBUG,my
 
 log4j.appender.my=org.apache.log4j.ConsoleAppender
 log4j.appender.my.layout=org.apache.log4j.PatternLayout
