--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -23,6 +23,8 @@
 
     </properties>
 
+
+
     <dependencies>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -275,6 +277,11 @@
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
             <version>2.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>Druid</artifactId>
+            <version>1.0.9</version>
         </dependency>
     </dependencies>
 
