--- a/demo-web/src/main/resources/db.properties
+++ b/demo-web/src/main/resources/db.properties
@@ -1,4 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/new_bos?characterEncoding=utf8
+#jdbc.url=jdbc:mysql://localhost:3306/bos
 jdbc.username=root
 jdbc.password=726112
