--- a/demo-web/src/main/webapp/WEB-INF/web.xml
+++ b/demo-web/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,18 @@
     </filter-mapping> 
     
    <!-- Shiro Security filter  filter-name这个名字的值将来还会在spring中用到  -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
     
        <!--3.struts2核心控制器-->
      <filter>
